Recieve email when a user signs up. they are able to recieve email to verify their email when a user forgets their password they are now able to get an email with a link to enable them reset their password

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["accountsutils", "createuser", "jsonify", "userutils"]
+  "cSpell.words": [
+    "accountsutils",
+    "createuser",
+    "dotenv",
+    "jsonify",
+    "SQLALCHEMY",
+    "urandom",
+    "userutils"
+  ]
 }
