--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.7
 flask==3.0.2
 Flask-Cors==4.0.0
 Flask-Login==0.6.3
+Flask-Mail==0.9.1
 Flask-Migrate==4.0.7
 flask-sqlalchemy==3.1.1
 greenlet==3.0.3
@@ -13,6 +14,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
+python-dotenv==1.0.1
 SQLAlchemy==2.0.28
 typing-extensions==4.10.0
 werkzeug==3.0.1
